# video-diffusion-speedrun

./: .gitignore  Dockerfile  README.md  build.sh  debug.py  docker-wrap.sh  download.py  hmm.sh  model.py  pyproject.toml  run_debug.sh  runner.sh  sharded_dataset.py  slurm.sh  test.sh  train.py  utils.py
sampling/: decoder.py  install_cosmos.sh  sample.py
