[project]
name = "video-diffusion-speedrun"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "torch==2.6.0",
    "datasets>=3.2.0,<4",
    "transformers>=4.47.1,<5",
    "wandb>=0.19.2,<0.20",
    "click>=8.1.8,<9",
    "einops>=0.8.0,<0.9",
    "sentencepiece>=0.2.0,<0.3",
    "py-spy>=0.4.0",
    "lovely-tensors>=0.1.18",

    # these are necessary for torch RC package.
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12", # !!
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "triton==3.2.0",
]

[project.optional-dependencies]
lavender-data = [
    "lavender-data",
]
# torchx-min = [
#     "torchx>=0.7.0",
#     "boto3==1.34.51",
#     "aiobotocore==2.12.1",
#     "ax-platform[mysql]==0.2.3",
#     "captum>=0.4.0",
#     "docker>=7.1.0",
#     "kubernetes==25.3.0",
#     "flake8==3.9.0",
#     "fsspec==2024.3.1",
#     "s3fs==2024.3.1",
#     "google-api-core>=2.18.0",
#     "google-cloud-batch==0.17.14",
#     "google-cloud-logging==3.10.0",
#     "google-cloud-runtimeconfig==0.34.0",
#     "hydra-core>=1.3.2",
#     "ipython>=8.31.0",
#     "kfp>=2.11.0",
#     "mlflow-skinny>=2.19.0",
#     "moto~=5.0.8",
#     "pyre-extensions>=0.0.32",
#     "pyre-check>=0.9.23",
#     "pytest>=8.3.4",
#     "pytest-cov>=6.0.0",
#     "tensorboard==2.14.0",
#     "sagemaker==2.224.4",
#     "ts==0.5.1",
#     "ray[default]>=2.40.0",
#     "wheel>=0.45.1",
#     "lintrunner>=0.12.7",
#     "lintrunner-adapters>=0.12.4",
#     "grpcio==1.62.1",
#     "googleapis-common-protos==1.63.0",
# ]


[tool.uv]
package = false
override-dependencies = [
    "nvidia-nccl-cu12==2.20.5"
]

[tool.uv.sources]
lavender-data = { git = "git+ssh://git@github.com/fal-ai/lavender-data.git", subdirectory = "packages/lavender-data" }
# explicitly pin these packages to test index URL; other packages will use PyPi.
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
triton = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/test/cu126"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["README.md"]